# Hunyuan3D-2GP

./: .envrc  .gitignore  README.md  README_ja_jp.md  Yummy_MODEL_API.py  api_server.py  flake.nix  gradio_app.py  minimal_demo.py  payload.json  pyproject.toml  request.json  requirements.txt  setup.py  test2.glb  yummy_api_server.py
hy3dgen/: rembg.py  text2image.py
hy3dgen/shapegen/: pipelines.py  postprocessors.py  utils.py
hy3dgen/shapegen/models/autoencoders/: surface_extractors.py
hy3dgen/texgen/: pipelines.py
hy3dgen/texgen/custom_rasterizer/: pyproject.toml
hy3dgen/texgen/custom_rasterizer/lib/custom_rasterizer_kernel/: grid_neighbor.cpp
hy3dgen/texgen/differentiable_renderer/: pyproject.toml  setup.py
hy3dgen/texgen/utils/: dehighlight_utils.py  multiview_utils.py
settings/: meta.json
src/: app.py  controller.py  entry.py
src/controller/: hunyuan3d.py  stable_diffusion.py
src/hy3dgen/shapegen/: pipelines.py
src/hy3dgen/shapegen/models/autoencoders/: model.py
src/hy3dgen/texgen/: pipelines.py
src/hy3dgen/texgen/custom_rasterizer/: pyproject.toml
src/hy3dgen/texgen/differentiable_renderer/: setup.py
src/hy3dgen/texgen/utils/: dehighlight_utils.py  multiview_utils.py
util/: png2base64.py
