[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mesh_processor"
version = "0.1.0"
description = "Mesh processing extension for Hunyuan3D texgen"
requires-python = ">=3.12"
dependencies = [
  "pybind11>=2.6.0",
]

[tool.setuptools]
packages = ["differentiable_renderer"]

[tool.setuptools.package-dir]
differentiable_renderer = "."
